--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,12 @@
-/.idea/
-/target/
-/yangkit-data-api/target/
-/yangkit-data-api/yangkit-data-api.iml
-/yangkit-data-impl/target/
-/yangkit-data-impl/yangkit-data-impl.iml
-/yangkit-data-json-codec/target/
-/yangkit-data-json-codec/yangkit-data-json-codec
-/yangkit-model-api/target/
-/yangkit-model-api/yangkit-model-api.iml
-/yangkit-model-impl/target/
-/yangkit-model-impl/yangkit-model-impl.iml
-/yangkit-parser/target/
-/yangkit-parser/yangkit-parser.iml
-/yangkit-xpath-api/target/
-/yangkit-xpath-api/yangkit-xpath-api.iml
-/yangkit-xpath-impl/target/
-/yangkit-xpath-impl/yangkit-xpath-impl.iml
-/yangkit-parent.iml
+target/
+!.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
+
+### IntelliJ IDEA ###
+.idea/
+*.iws
+*.iml
+*.ipr
+
+*/apidocs/*
