feat: update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,10 @@
 /target/
 /yangkit-data-api/target/
 /yangkit-data-api/yangkit-data-api.iml
-yangkit-data-impl/target/
+/yangkit-data-impl/target/
+/yangkit-data-impl/yangkit-data-impl.iml
+/yangkit-data-json-codec/target/
+/yangkit-data-json-codec/yangkit-data-json-codec
 /yangkit-model-api/target/
 /yangkit-model-api/yangkit-model-api.iml
 /yangkit-model-impl/target/
